--- a/plugin.xml
+++ b/plugin.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        id="cordova-plugin-jp-pt210-printer" version="0.0.1">
-    <name>BlutoothPrinterJPPT210</name>
-    <description>A Cordova Plugin for JP-PT210 Bluetooth Printer</description>
-    <license>Apache 2.0</license>
-    <keywords>cordova,jp_pt210,bluetooth,printer</keywords>
-    <author>Nuno Rodrigues</author>
-    <repo>https://github.com/NunoRodrigues15/jp-pt210-printer-cordova-plugin.git/repo>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-jp-pt210-printer" version="0.0.1">
+  <name>BlutoothPrinterJPPT210</name>
+  <description>A Cordova Plugin for JP-PT210 Bluetooth Printer</description>
+  <license>Apache 2.0</license>
+  <keywords>cordova,jp_pt210,bluetooth,printer</keywords>
+  <author>Nuno Rodrigues</author>
+  <repo>https://github.com/NunoRodrigues15/jp-pt210-printer-cordova-plugin.git</repo>
 
     <js-module src="www/jpprinter.js" name="JpPrinter">
-        <clobbers target="JpPrinter" />
+      <clobbers target="JpPrinter"/>
     </js-module>
     <platform name="android">
       <config-file target="AndroidManifest.xml" parent="/*">
-            <uses-permission android:name="android.permission.BLUETOOTH"/>
-            <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-        </config-file>
-        <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="JpPrinter">
-                <param name="android-package" value="com.odkas.factory.JpPrinter"/>
-                <param onLoad="true"/>
-            </feature>
-        </config-file>
-        <source-file src="src/android/com/odkas/factory/BlutoothPrinterJPPT210.java" target-dir="src/android/com/odkas/factory/"/>
+        <uses-permission android:name="android.permission.BLUETOOTH"/>
+        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+      </config-file>
+      <config-file target="res/xml/config.xml" parent="/*">
+        <feature name="JpPrinter">
+          <param name="android-package" value="com.odkas.factory.JpPrinter"/>
+          <param onLoad="true"/>
+        </feature>
+      </config-file>
+      <source-file src="src/android/com/odkas/factory/BlutoothPrinterJPPT210.java" target-dir="src/android/com/odkas/factory/"/>
     </platform>
-</plugin>
+  </plugin>
