--- a/plugin.xml
+++ b/plugin.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-jp-pt210-printer" version="0.0.1">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-jpprinter" version="0.0.1">
 
   <name>BlutoothPrinterJPPT210</name>
   <description>A Cordova Plugin for JP-PT210 Bluetooth Printer</description>
   <license>Apache 2.0</license>
-  <keywords>cordova,jp_pt210,bluetooth,printer</keywords>
+  <keywords>cordova,jp-pt210,bluetooth,printer</keywords>
   <author>Nuno Rodrigues</author>
-
   <repo>https://github.com/NunoRodrigues15/jp-pt210-printer-cordova-plugin.git</repo>
 
   <engines>
@@ -27,7 +26,7 @@
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="JpPrinter">
-        <param name="android-package" value="com.odkas.factory.JpPrinter"/>
+        <param name="android-package" value="com.odkas.factory.jpprinter"/>
         <param onLoad="true"/>
       </feature>
     </config-file>
